Added some opengl lib for eventual graphic support

--- a/RocketEngine/RocketEngine.vcxproj.filters
+++ b/RocketEngine/RocketEngine.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="RocketEngine.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Documents\Opengl\glad.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RocketMain.h">
@@ -35,5 +38,10 @@
     <ClInclude Include="RocketEngine.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RocketEngine.rc">
+      <Filter>Fichiers de ressources</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
