--- a/RocketEngine/RocketEngine.vcxproj.filters
+++ b/RocketEngine/RocketEngine.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="RocketEngine.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="FuelOxidizer.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="RocketEngine.rc">
