--- a/RocketEngine/RocketEngine.vcxproj.filters
+++ b/RocketEngine/RocketEngine.vcxproj.filters
@@ -21,24 +21,15 @@
     <ClCompile Include="RocketMain.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="RocketEngine.cpp">
+    <ClCompile Include="..\..\..\..\Documents\Opengl\glad.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Documents\Opengl\glad.c">
+    <ClCompile Include="FlightSimulation.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="RocketMain.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
     <ClInclude Include="Source.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="RocketEngine.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="FuelOxidizer.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
